# idefixhelper

./: README.md  meson.build  pyproject.toml
idefixhelper/: __init__.py  idefixhelper.py  meson.build  writable_dump.py
