[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy']

[project]
name = 'idefixhelper'
version = '0.0.1'
description = 'Helper functions for Idefix'
readme = { file = 'README.md', content-type = 'text/markdown' }
authors = [
    { name = "Til Birnstiel", email = "til.birnstiel@lmu.de" },
]
license = { file = 'LICENSE' }
dependencies = ['numpy']